--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -2,29 +2,55 @@
 @import "./responsive";
 @import "./fonts";
 
+$headerHeight: 80;
+$headerHeightSmall: 60;
+
+body {
+  margin: 0;
+  font-family: $fontOpenSans, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+
 .app {
   min-height: 100vh;
-  font-family: $fontDefault;
-  color: $text-color;
+  font-family: $fontOpenSans;
+  color: $primary-color;
   font-size: $base-font-size;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
+@keyframes changeOpacity {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
+
 .loading {
   display: flex;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  padding-top: 3rem;
+  padding-left: 24px;
+  flex: 1;
+  padding-right: 24px;
+  padding-top: $headerHeightSmall+px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  opacity: 0.6;
+  opacity: 0.4;
+  animation-duration: 0.6s;
+  animation-name: changeOpacity;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 
-  @include mobile {
-    padding-top: 0;
-    height: calc(100% - 80px);
+  @include desktop {
+    padding-top: $headerHeight+px;
   }
 
   .loading__text {
@@ -41,43 +67,72 @@
 }
 
 .content-container {
-  padding: 0 24px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 24px;
+  padding-left: 24px;
+
+  @include tablet {
+    padding-right: 48px;
+    padding-left: 48px;
+  }
 
   @include desktop {
     max-width: $page-max-width;
-    margin: 0 auto;
+    padding-right: 60px;
+    padding-left: 60px;
   }
 }
 
 .heading {
   margin: 0;
-  font-family: $heading-font;
+  font-family: $fontMerriweather;
 }
 
 a {
   margin: 0;
-  color: $text-color;
+  color: $primary-color;
   text-decoration: none;
+  transition: 0.2s all ease-in-out;
+
+  &:hover {
+    opacity: 0.8;
+  }
 }
 
 
 //Sections_____________________________
 .header {
-  height: 80px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: $headerHeightSmall+px;
   display: flex;
   align-items: center;
+  background-color: $primary-color;
   box-shadow: 0 3px 15px rgba(57, 63, 72, 0.1);
 
+  @include desktop {
+    height: $headerHeight+px;
+  }
+
   .header__title {
-    font-size: 24px;
+    color: white;
+    font-size: 18px;
+
+    @include desktop {
+      font-size: 24px;
+    }
   }
 }
 
-.main {
-  background-color: $bg-color;
-  display: flex;
-  flex: 1;
-}
+//.main {
+//  background-color: $bg-color;
+//  display: flex;
+//  flex: 1;
+//}
 
 .footer {
   height: 40px;
@@ -85,7 +140,8 @@ a {
   align-items: center;
   background-color: $primary-color;
 
-  .footer__title {
+  .footer-text {
+    margin: 0 5px;
     font-size: 12px;
     color: $secondary-color;
   }
@@ -94,7 +150,13 @@ a {
 
 //BookList_____________________________
 .book-list {
+  padding-top: $headerHeightSmall + 24px;
   padding-bottom: 24px;
+  background-color: $bg-color;
+
+  @include desktop {
+    padding-top: $headerHeight + 24px;
+  }
 
   .book-list-content {
     position: relative;
@@ -128,13 +190,15 @@ a {
   align-items: center;
   border-radius: 8px;
   border: 2px solid $soft-gray;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  background-color: white;
+  box-shadow: 0 10px 15px 0px rgba(0, 0, 0, 0.05);
 
   @include tablet {
     width: calc(50% - 40px);
   }
 
   @include desktop {
+    margin-bottom: 20px;
     padding: 10px 24px;
     flex-direction: row;
     height: 200px;
@@ -153,8 +217,8 @@ a {
       &.width-2 {
         width: 2%;
       }
-      &.width-10 {
-        width: 10%;
+      &.width-12 {
+        width: 12%;
       }
       &.width-20 {
         width: 20%;
@@ -166,6 +230,7 @@ a {
 
     .book-list-item__number {
       font-weight: bold;
+      width: 20px;
     }
 
     .book-list-item__cover-wrapper {
