--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,7 +2,8 @@ $bg-color: #f4f4f4;
 $base-font-size: 14px;
 
 $primary-color: #14213d;
-$secondary-color: #d8cbc7;
+$secondary-color: #5d675b;
+$tertiary-color: #d8cbc7;
 $gray: #dddddd;
 $soft-gray: #ededed;
 
